Reworked framework structure and architecture